fixed email attachment name font color in dark mode

--- a/css/styles.css
+++ b/css/styles.css
@@ -192,3 +192,7 @@ body.dark-mode .btn-outline-danger {
 body.dark-mode .btn-outline-warning {
   border-color: #666;
 }
+
+body.dark-mode #emailAttachment {
+  color: #e4e4e4 !important;
+}
